--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,6 @@ before_install:
 install:
   - pip install stop-words
   - pip install PyStemmer
+  - pip install six
 script:
   - python setup.py test
